--- a/style3.css
+++ b/style3.css
@@ -127,5 +127,18 @@ button {
     background: transparent;
     cursor: pointer;
 }
+
+@media (max-width: 499px) {
+    form {
+      width: 90%;
+      left: 5%;
+    }
+    h1 {
+      font-size: 1.5em;
+    }
+    button {
+      width: 90%;
+    }
+  }
 /* All code copyright 2022-2023 Shadow Foundry, Inc. All rights reserved. */
 /* https://shadowfoundry.ai */
