--- a/style.css
+++ b/style.css
@@ -191,6 +191,13 @@
     z-index: 10;
   }
 
+  .text h1 {
+    font-size: 1em;
+    margin: 20px 0;
+    font-weight: 300;
+    max-width: 700px;
+  }
+
   .text h2 {
     font-size: 4em;
     font-weight: 900;
